--- a/.github/workflows/bdv-cron.yml
+++ b/.github/workflows/bdv-cron.yml
@@ -1,87 +1,78 @@
-name: BDV Cron (scan + monitor)
+name: BDV Cron
 
 on:
   schedule:
-    - cron: "*/5 * * * 1-5"
+    - cron: "*/5 * * * 1-5"   # cada 5 min, lun-vie (weekends ya quedan fuera)
   workflow_dispatch:
 
 jobs:
   bdv:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
-
+    timeout-minutes: 10
     steps:
-      - name: Scan + Monitor (RTH-aware, no curl23)
-        shell: bash
+      - name: BDV guard + calls
+        env:
+          BASE_URL: ${{ secrets.BDV_BASE_URL }}
+          API_KEY: ${{ secrets.BDV_API_KEY }}
         run: |
           set -euo pipefail
 
-          BASE="${{ secrets.BDV_BASE_URL }}"
-          SECRET="${{ secrets.BDV_AGENT_SECRET }}"
+          TZ="America/New_York"
+          dow=$(TZ=$TZ date +%u)         # 1..7 (Mon..Sun)
+          hhmm=$(TZ=$TZ date +%H%M)      # 0000..2359
+          now_iso=$(TZ=$TZ date +"%Y-%m-%d %H:%M:%S %Z")
+          echo "NY_TIME=$now_iso (dow=$dow hhmm=$hhmm)"
 
-          if [[ -z "$BASE" || -z "$SECRET" ]]; then
-            echo "ERROR: Missing BDV_BASE_URL or BDV_AGENT_SECRET"
-            exit 1
-          fi
-
-          # ---- RTH gate (America/New_York 09:30-16:00) ----
-          export TZ="America/New_York"
-          DOW="$(date +%u)"      # 1..7
-          HHMM="$(date +%H%M)"   # 0000..2359
-
-          if (( DOW > 5 )); then
-            echo "Outside RTH: weekend -> exit OK"
+          # Weekend guard (extra seguridad aunque el cron sea 1-5)
+          if [ "$dow" -ge 6 ]; then
+            echo "Outside RTH (weekend) -> exit OK"
             exit 0
           fi
 
-          if (( 10#$HHMM < 930 || 10#$HHMM > 1600 )); then
-            echo "Outside RTH: now=$HHMM NY -> exit OK"
+          # RTH window (09:30–16:00)
+          RTH_START=0930
+          RTH_END=1600
+
+          if [ "$hhmm" -lt "$RTH_START" ] || [ "$hhmm" -ge "$RTH_END" ]; then
+            echo "Outside RTH: now=$hhmm NY -> exit OK"
             exit 0
           fi
+
+          echo "Inside RTH: now=$hhmm NY -> running endpoints"
 
           call() {
-            local method="$1"
-            local url="$2"
-            local out="$3"
+            local path="$1"
+            local url="${BASE_URL}${path}"
+            local tmp_body
+            tmp_body="$(mktemp)"
 
-            echo "==> $method $url"
-            local code
-            code=$(curl -sS -L --connect-timeout 10 --max-time 20 \
-              --retry 5 --retry-delay 2 --retry-all-errors \
-              -X "$method" \
-              -o "$out" \
-              -H "accept: application/json" \
-              -H "x-bdv-secret: $SECRET" \
-              -w "%{http_code}" \
-              "$url" || echo "000")
+            # -sS: silencioso pero muestra errores
+            # -o body: no imprime html a consola
+            # -w: captura http_code
+            http_code=$(
+              curl -sS -o "$tmp_body" -w "%{http_code}" \
+                -H "Authorization: Bearer ${API_KEY}" \
+                -H "Content-Type: application/json" \
+                --connect-timeout 5 --max-time 20 \
+                "$url" || echo "000"
+            )
 
-            echo "HTTP $code"
-            echo "-- body head --"
-            head -c 800 "$out" || true
-            echo
-            echo "$code"
+            # snippet controlado (primeros 300 chars, sin “basura infinita”)
+            snippet=$(head -c 300 "$tmp_body" | tr '\n' ' ' | sed 's/  */ /g')
+            rm -f "$tmp_body"
+
+            echo "ENDPOINT ${path} -> http_code=${http_code} | body_snippet=${snippet}"
+
+            if [ "$http_code" != "200" ]; then
+              echo "FAIL: ${path} returned ${http_code}"
+              exit 1
+            fi
           }
 
-          # 1) status
-          code="$(call GET "$BASE/config/status" /tmp/status.json)"
-          [[ "$code" == "200" ]] || { echo "FAIL /config/status"; exit 1; }
+          # Orden que pediste
+          call "/config/status?set=auto"
+          call "/config/status"
+          call "/agent/scan"
+          call "/monitor/tick"
 
-          # 2) force auto via querystring (sin body)
-          code="$(call POST "$BASE/config/execution-mode?mode=auto" /tmp/set_auto.json)"
-          [[ "$code" == "200" ]] || { echo "FAIL /config/execution-mode"; exit 1; }
-
-          # 3) scan
-          code="$(call GET "$BASE/agent/scan?force_analysis=0" /tmp/scan.json)"
-          [[ "$code" == "200" ]] || { echo "FAIL /agent/scan"; exit 1; }
-
-          # 4) si scan dice no operable, NO fallar (exit OK)
-          if grep -qi '"status"[[:space:]]*:[[:space:]]*"yellow"' /tmp/scan.json; then
-            echo "Scan yellow -> exit OK"
-            exit 0
-          fi
-
-          # 5) tick
-          code="$(call GET "$BASE/monitor/tick" /tmp/tick.json)"
-          [[ "$code" == "200" ]] || { echo "FAIL /monitor/tick"; exit 1; }
-
-          echo "DONE OK"
+          echo "All endpoints OK inside RTH."
